# BoringTwitterClient

./: .gitattributes  Makefile  README.md
.semaphore/: semaphore.yml
proto/: types.proto
rust/: Boring.h  Cargo.toml  Info.plist  module.modulemap
rust/boring_core/: Cargo.toml  cbindgen.toml
rust/boring_core/src/: lib.rs
rust/boring_store/: Cargo.toml  build.rs
rust/boring_store/src/: error.rs  lib.rs
rust/boring_store/tests/: deserialization.rs
rust/viaduct/: Cargo.toml
swift/: .gitignore  Cartfile  Cartfile.resolved
swift/BoringTwitterClone/: Boring-Bridging-Header.h  BoringTwitterCloneApp.swift
swift/BoringTwitterClone.xcodeproj/: project.pbxproj
swift/BoringTwitterClone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/BoringTwitterClone/FFI/: BoringError.swift  CommonErrors.swift  Data+Rust.swift  String+Rust.swift
swift/BoringTwitterClone/Proto/: types.pb.swift
swift/BoringTwitterClone/Rust/include/: ffi.h
swift/BoringTwitterClone/Sources/: AppDelegate.swift
swift/BoringTwitterClone/Sources/Environment/: Environment.swift  FFI.swift  Theme.swift
swift/BoringTwitterClone/Sources/Extensions/: Flex+Boring.swift  ObservableType+Boring.swift  (+3 more)
swift/BoringTwitterCloneTests/: BoringTwitterCloneTests.swift
swift/Carthage/: input.xcfilelist  output.xcfilelist
swift/FFI/: BoringError.swift  Data+Rust.swift  String+Rust.swift
swift/Proto/: types.pb.swift
swift/Rust/Boring.xcframework/: Info.plist
swift/Sources/: FFI.swift  PostDetailView.swift  PostListView.swift
swift/fastlane/: Fastfile  README.md
(+17 files in other folders)
